:white_check_mark: Add Enemy tests

--- a/Asteroids/Enemy/pom.xml
+++ b/Asteroids/Enemy/pom.xml
@@ -30,5 +30,11 @@
             <artifactId>Bullet</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter</artifactId>
+            <version>RELEASE</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
