--- a/Asteroids/LifeProcesser/pom.xml
+++ b/Asteroids/LifeProcesser/pom.xml
@@ -31,5 +31,11 @@
             <artifactId>Common</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.junit.jupiter</groupId>
+            <artifactId>junit-jupiter-api</artifactId>
+            <version>5.9.0-M1</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
